<resources>
    <string name="app_name">School</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_logo_off">Logo_Off"</string>
    <string name="menu_ClasseRoom">ClasseRoom</string>
    <string name="menu_marks_students">Marks Students</string>
    <string name="menu_exams">Exams</string>
    <string name="menu_money_file">MoneyFile</string>
    <string name="menu_presence">Presence</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_student_activity">Student Activity</string>
    <string name="menu_student_record">Student Record</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="add_new_teacher">Add New Teacher</string>
    <string name="status">Status</string>
    <string name="address">Address</string>
    <string name="name">name</string>
</resources>